# analisis-sentimientos-xenofobia-mundial

./: .gitignore  CONTRATO.md  ESTRATEGIA_BUSQUEDA.md  README.md
paper/: INFORME_PARA_JOSE.md  REFERENCIAS.md
practica_06/: .env.example  .gitignore  BLUESKY.md  README.md  analisis-x.ipynb  analisis-youtube.ipynb  pyproject.toml
practica_06/config/: busqueda.toml  lexico.txt
practica_06/docs/: TUMBLR.md  TWITCH.md  xenofobia-redes-sociales-mundial-fifa-2026.md
practica_06/evidencia/: README.md
practica_06/scripts/: recoleccion.py  recoleccion_davoo.py  recoleccion_x.py  recoleccion_x_nocturna.sh  tiktok_captura_textos_live.py  tiktok_captura_visible.py  tiktok_curar_dataset.py  tiktok_login.py
practica_06/src/extractor_mundial/: __init__.py  almacenamiento.py  config.py  contrato.py  lexico.py  main.py  orquestador.py  remarcado.py
practica_06/src/extractor_mundial/extractores/: __init__.py  base.py  bluesky.py  mastodon.py  reddit.py  tiktok.py  tumblr.py  twitch.py  x.py  youtube.py  youtube_api.py
practica_06/tests/: conftest.py  test_config_x.py  test_mastodon_api.py  test_x_extractor.py  test_x_parser.py  test_youtube_api.py
practica_06/tests/fixtures/: tweet.html
practica_07/: README.md  analisis_sentimiento.ipynb  curacion_datos.ipynb  pyproject.toml  sentimiento_worker.py
practica_07/informe/: INFORME_P7.md
proyecto_final/: README.md
proyecto_final/backend/: .env.example  .gitignore  README.md  pyproject.toml
proyecto_final/backend/src/plataforma/: __init__.py  bd.py  busqueda.py  config.py  esquema.sql  esquemas.py  main.py  sentimiento.py
proyecto_final/backend/tests/: test_bd.py  test_busqueda.py
proyecto_final/frontend/: README.md  index.html
proyecto_final/frontend/css/: estilos.css
proyecto_final/frontend/js/: api.js  app.js  datos_corpus.js  graficos.js  vista_busqueda.js  vista_dashboard.js  vista_explorador.js  vista_historia.js
proyecto_final/frontend/mock/: servidor_mock.py
rubricas/: Práctica de laboratorio 06_ Extracción de grandes volúmenes de datos usando como medio de información las redes sociales.md  Práctica de laboratorio 07_ Desarrollo e implementación de aplicaciones de computo paralelo para análisis de grandes volúmenes de datos usando procesamiento de lenguaje natural.md  final.txt  proyecto_final.md
